Banner alignment fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@media (max-width: 640px) {
-  .rounded-2xls {
-    background-size: 100% auto;
-  }
-}
